# bkr

./: .gitignore  Bkr.hs  BkrAws.hs  BkrAwsConfig.hs  BkrConfig.hs  BkrFundare.hs  BkrLocalFile.hs  BkrLocalMeta.hs  BkrLogging.hs  BkrS3Bucket.hs  Hasher.hs  LICENSE  README.org  TODO  bkr.cabal  bkr.conf.example  bkrtst0.hs
src/: Bkr.hs  BkrAwsConfig.hs  BkrConfig.hs  BkrFundare.hs  BkrLocalFile.hs  BkrLocalMeta.hs  BkrLogging.hs  BkrS3Bucket.hs  Hasher.hs  Main.hs  bkr.conf.example
src/Bkr/: BkrConfig.hs  BkrFundare.hs  BkrLocalFile.hs  BkrLocalMeta.hs  BkrLogging.hs  Hasher copy.hs  Hasher.hs
src/Bkr/TargetServices/S3/: BkrAwsConfig.hs  BkrS3Bucket.hs
src/System/Bkr/: BkrConfig.hs  BkrFundare.hs  BkrLocalFile.hs  BkrLocalMeta.hs  BkrLogging.hs  BkrWriteExampleConfFile.hs  Hasher.hs
src/System/Bkr/TargetServices/S3/: BkrAwsConfig.hs  BkrS3Bucket.hs
