name:                bkr
version:             0.1.0
synopsis:            Backup utility for backing up to cloud storage services (S3 only right now)
description:
        Easy to use backup utility for utilizing cloud services (S3 only right now) as backup storage.

        bkr is in very early development, future versions might break backwards compatibility. Right now bkr is rather an synchronization then a backup utility. bkr pushes wanted folders and files to remote storage (S3), next time it runs it checks for changes and uploads new or altered files but does not keep copies of altered files (hence rather synchronization then backup).
license:             BSD3
license-file:        LICENSE
copyright:           (c) 2012 Michael Smietana
author:              Michael Smietana <michael@smietana.se>
maintainer:          Michael Smietana <michael@smietana.se>
category:            System, Backup
build-type:          Simple
cabal-version:       >=1.2
tested-with:         GHC == 7.0.4
homepage:            https://github.com/ingesson/bkr
bug-reports:         https://github.com/ingesson/bkr/issues

executable bkr
  main-is: Main.hs
  
  build-depends:   base == 4.*
                 , directory >= 1.1.0.2      
                 , aws >= 0.4.0.1
                 , hslogger >= 1.0.7
                 , strict >= 0.3.2
                 , bytestring >= 0.9.2.1
                 , text >= 0.7.2.1
                 , HDBC >= 2.3.1.1
                 , HDBC-sqlite3 >= 2.3.3.0
                 , random 1.0.0.3
                 , pureMD5 >= 2.1.0.3
                 , http-conduit >= 1.2.4
                       
  ghc-options: -O2 -Wall -Werror
